--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="header-class">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</>
+      <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    <div class="main-class">
+      <p id="add-task-section">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="to-do-tasks">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <button class="edit-btn">Edit</button>
+          <button class="delete-btn">
             <img src="./remove.svg">
           </button>
         </li>
@@ -33,8 +33,8 @@
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
+          <button class="edit-btn">Save</button>
+          <button class="delete-btn">
             <img src="./remove.svg">
           </button>
         </li>
@@ -45,13 +45,13 @@
             <input type="checkbox" checked>
               <label class="task">See the Doctor</label>
               <input type="text" class="task">
-              <button class="edit">Edit</button>
-              <button class="delete">
+              <button class="edit-btn">Edit</button>
+              <button class="delete-btn">
                 <img src="./remove.svg">
               </button>
           </li>
         </ul>
       </div>
-    <script type="text/javascript" src="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
